# bajaj-insurance-rag-based-chatbot

./: .gitignore  TEST.md  main.py  pyproject.toml  requirements.txt  setup.py
config/: config.yaml
data/: bajaj_insurance_documents_statewise.json
notebooks/: download.ipynb  test.ipynb
prompt/: prompt_library.py
src/: utils.py
src/agent_component/: __init__.py  agent.py  graph_builder.py  tools.py
src/rag_component/: __init__.py  astradb.py
streamlit_app/: app.py  app_new.py
