[project]
name = "bajaj-insurance-rag-based-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=0.3.27",
    "langchain-astradb>=0.6.1",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-groq>=0.3.7",
    "langgraph>=0.6.6",
    "lxml>=6.0.1",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pymupdf>=1.26.4",
    "requests>=2.32.5",
    "streamlit>=1.49.1",
    "streamlit-pills>=0.3.0",
    "tqdm>=4.67.1",
]
